<resources>
    <string name="app_name">EcoCart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Mahesh Kumar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="all_categories">All Categories</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="sell_on_flipkart">Sell On Flipkart</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="logout">LogOut</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="content_description_notification">Content Description Notification</string>
    <string name="notification">Notification</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart">Cart</string>
    <string name="content_description_cart">Content Description Cart</string>
    <string name="action_search">Action Search</string>
    <string name="the_caption_title">The Caption Title</string>
    <string name="content_description_media">Content Description Media</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="supporting_text">supporting_text</string>
    <string name="action">Action</string>
    <string name="action_2">Action 2</string>
    <string name="product_image">Product_Image</string>
    <string name="text">Text</string>
    <string name="product_title">Product Title</string>
    <string name="shop">Shop</string>
    <string name="categories">Categories</string>
    <string name="explore">Explore</string>
    <string name="profile_bottom">Profile</string>
    <string name="top_selling_products">Top Selling Products</string>
    <string name="splashimage">splashImage</string>

</resources>