<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="130dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bd"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoebold"
        android:text="@string/product_title"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/productImage"
        app:layout_constraintTop_toBottomOf="@+id/productImage"
        tools:layout_editor_absoluteY="201dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoesemibold"
        android:text="@string/price"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/productImage"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        android:text="@string/add_to_cart"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/productImage"
        app:layout_constraintTop_toBottomOf="@+id/price"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>